kubernetes/openfaas/faas-idler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-idler
  namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-idler
  template:
    metadata:
      labels:
        app: faas-idler
    spec:
      containers:
      - name: faas-idler
        image: quay.io/openfaas/faas-idler:0.4.0
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
