kubernetes/openfaas/faas-netes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-netes-deployment
  namespace: openfaas
  labels:
    app: faas-netes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-netes
  template:
    metadata:
      labels:
        app: faas-netes
    spec:
      serviceAccountName: faas-controller
      containers:
      - name: faas-netes
        image: quay.io/openfaas/faas-netes:0.12.4
        volumeMounts:
        - name: basic-auth
          mountPath: /var/run/secrets
          readOnly: true  
        resources:
          requests:
            memory: "100Mi"
          # limits:
          #   memory: "200Mi"
      volumes:
      - name: basic-auth
        secret:
          secretName: basic-auth
      restartPolicy: Always
--- # Service
apiVersion: v1
kind: Service
metadata:
  name: faas-netes
  namespace: openfaas
spec:
  selector:
    app: faas-netes
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
