kubernetes/openfaas/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: openfaas
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        # image: quay.io/openfaas/gateway:0.18.18
        image: ghcr.io/openfaas/gateway:0.27.12
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: basic-auth
          mountPath: /var/run/secrets
          readOnly: true  
        resources:
          requests:
            memory: "100Mi"
          # limits:
          #   memory: "200Mi"
      volumes:
      - name: basic-auth
        secret:
          secretName: basic-auth
      restartPolicy: Always
--- # Service
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: openfaas
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  # type: LoadBalancer
