kubernetes/openfaas/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
  namespace: openfaas
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats-streaming:0.17.0
        args: ["--store", "memory", "--cluster_id", "faas-cluster"]
        resources:
          requests:
            memory: "50Mi"
          limits:
            memory: "125Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: openfaas
spec:
  selector:
    app: nats
  ports:
  - name: nats-port
    protocol: TCP
    port: 4222
    targetPort: 4222
  - name: monitoring-port
    protocol: TCP
    port: 8222
    targetPort: 8222
