kubernetes/openfaas/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcap-registry
  namespace: openfaas
spec:
  type: ExternalName
  externalName: pcap-registry.pcap-api.svc.cluster.local
  ports:
    - port: 5000
      targetPort: 5000
