kubernetes/openfaas/ingress-faas.yaml
# Ingress pour accéder aux dashboard d'openfaas pour voir les fonctions
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-dashboard
  namespace: openfaas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`faas.localhost`)
      kind: Rule
      services:
        - name: gateway
          namespace: openfaas
          port: 8080
  tls:  
    certResolver: leresolver
